--- a/packages/vue/example/effect.html
+++ b/packages/vue/example/effect.html
@@ -20,7 +20,9 @@
       effect(() => {
         state.age
       })
-      state.sex
+      effect(() => {
+        state.age
+      })
     })
   </script>
 </html>
